Update repository with Section 3 Lesson 35 content. User can now shoot targets and increase their score. Targets are now prefab objects with a Score Per Hit field.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BallLauncher.cs" />
      <Compile Include="Assets\Scripts\CameraRotation.cs" />
+     <Compile Include="Assets\Scripts\DetectScoring.cs" />
+     <Compile Include="Assets\Scripts\ScoreKeeper.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
